# data-analysis-agent

./: .env  README_streamlit.md  STREAMLIT_SETUP.md  main.ipynb  main.py  manager.py  pyproject.toml  run_streamlit.sh  start_full_system.py  streamlit_app.py  streamlit_simple.py  test.ipynb  test.py  test_corr_advanced.py  test_corr_fix.py
agent/: analysis_agent.py  conversation_agent.py  data_cleaning_agent.py  description_analysis_agent.py  extract_data_agent.py  load_data_agent.py  triage_agent.py
agent_mcp/: analyst.py  corr_agent.py  loader.py  visualization_agent.py
custom_types/: types.py
data/: corr.csv  test.xlsx
docs/: README_correlation.md  README_interactive_visualization.md  correlation_analysis_api.md  flowchart.md  interactive_visualization_api.md  tool与mcp.md  数据分析agent.md
frontend/: LOGGING_README.md  README.md  README_frontend.md  UNIVERSAL_LOGGER_README.md  app.py  backend.py  config.py  deployment_guide.md  example_new_server.py  intelligent_analysis_backend_guide.md  logger_config.py  run_frontend.sh  start_system.py  test_universal_logger.py
logs/: code_executor.pid  reports_20250522_105304.md  result_20250520_165026.json  result_20250520_170328.json  result_20250520_170940.json  result_20250520_172409.json  result_20250521_110109.json  result_20250521_110736.json  result_20250521_111539.json  result_20250521_112349.json  result_20250521_173325.json  result_20250522_101722.json  result_20250522_102221.json  result_20250522_103852.json  result_20250522_104241.json  result_20250522_105647.json  result_20250522_143121.json  (+1 more)
server/: corr.py  (+10 more)
(+12 files in other folders)
