[project]
name = "analysis-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "mcp[cli]>=1.8.1",
    "numpy>=2.2.6",
    "openai>=1.78.1",
    "openai-agents>=0.0.14",
    "pandas>=2.2.3",
    "rich>=14.0.0",
]
