[project]
name = "analysis-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "loguru>=0.7.2",
    "matplotlib>=3.10.3",
    "mcp[cli]>=1.8.1",
    "numpy>=2.2.6",
    "openai>=1.78.1",
    "openai-agents>=0.0.14",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.1.1",
    "pydantic>=2.11.5",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "streamlit>=1.45.1",
    "streamlit-chat>=0.1.1",
    "uvicorn>=0.34.2",
]
